--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Hi</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
     <body>
-    <p>Alvin was here.</p>
+        <nav id = "navbar">
+            <ul>
+                <li class = "navbutton"><a href="">Home</a></li>
+                <li class = "navbutton"><a href="">About Me</a></li>
+                <li class = "navbutton"><a href="">Resume</a></li>
+            </ul>
+        </nav>
+        <p>Alvin was here.</p>
     </body>
 </html>
